# cliara-app

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPLETE_WORKFLOW_EXAMPLE.md  COMPLETION_REPORT.md  EXAMPLES.md  INDEX.md  LIVE_DEMO_GUIDE.md  MANIFEST.in  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  START_HERE.md  TODO.md  USAGE.md  VERIFICATION.md  demo.bat  examples.py  integration_test.py  pyproject.toml  pytest.ini  requirements.txt  setup_demo.py  start.bat  start.sh  todo.txt
app/: __init__.py  executor.py  macros.py  main.py  parser.py  safety.py
cliara/: __init__.py  auth.py  auto_indexer.py  causal_graph.py  causal_graph_tui.py  chat_export.py  code_review.py  codebase_rag.py  config.py  console.py  copilot_gate.py  deploy_detector.py  deploy_prereqs.py  deploy_publish.py  deploy_store.py  diff_preview.py  execution_graph.py  file_lock.py  gh_api.py  gh_cli.py  gh_llm.py  highlighting.py  icons.py  ide_bridge.py  install_logo.py  macros.py  main.py  nl_handler.py  output_archive.py  pulse.py  pulse_cli.py  pulse_store.py  readme_context.py  regression.py  safety.py  secret_scan.py  self_upgrade.py  semantic_history.py  session_store.py  setup_ollama.py  (+3 more)
cliara-cloud/: .dockerignore  .env.example  Dockerfile  README.md  auth_middleware.py  main.py  proxy.py  railway.toml  rate_limit.py  requirements.txt  settings.py
cliara-cloud/supabase/migrations/: 001_initial.sql
cliara-gate-extension/: package-lock.json  package.json  tsconfig.json
cliara-gate-extension/src/: cliaraTerminal.ts  extension.ts  ideBridgeClient.ts  patterns.ts  riskEngine.ts
cliara/agents/: __init__.py  chat_polish.py  cliara_qa.py  code_review.py  codebase_qa.py  commit_and_deploy.py  copilot_explain.py  explain.py  explain_output.py  fix.py  gh_assistant.py  history_answer.py  history_search.py  history_summary.py  nl_router.py  nl_to_commands.py  readme_generator.py  redact.py  session_closeout.py  session_reflect.py
cliara/agents/prompts/: chat_polish.md  cliara_qa.md  code_review.md  codebase_qa.md  commit_message.txt  copilot_explain.txt  deploy.md  deploy.txt  explain.txt  explain_output.txt  fix.txt  gh_assistant.md  history_answer.md  history_search.md  history_summary.txt  nl_macro_propose.md  nl_router.md  nl_to_commands.md  nl_to_commands.txt  readme.md  redact.md  session_closeout.txt  session_reflect.txt
cliara/nl/: __init__.py  constants.py  service.py  session_reflect.py
cliara/shell_app/: __init__.py  auto_index.py  codebase_commands.py  deploy_commands.py  execution_engine.py  gate_flow.py  ghost_commands.py  input_routing.py  jump.py  macro_commands.py  orchestrator.py  output_archive_commands.py  prune_branches.py  review_commands.py  runtime.py  session_commands.py
cliara/storage/: __init__.py  factory.py  json_backend.py  postgres_backend.py
cliara/tools/: migrate.py
cliara/translation/: __init__.py  core.py
data/: macros.json
docs/: POSTGRES_SETUP.md  POSTGRES_WINDOWS_SETUP.md  QUICKSTART.md  README.md
scripts/: debug_semantic_history.py
tests/: test_basic.py
