[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cliara"
version = "0.4.6"
description = "An AI-powered shell that understands natural language and macros"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Cliara Contributors"}
]
keywords = ["cli", "shell", "ai", "natural-language", "macros", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: System :: Shells",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core shell & UI
    "prompt-toolkit>=3.0.0",
    "filelock>=3.12.0",  # Cross-platform file locking for multi-instance support
    "pygments>=2.0.0",
    "rich>=13.0.0",
    # Config & env
    "python-dotenv>=1.0.0",
    # Macros (fuzzy matching)
    "thefuzz>=0.20.0",
    # AI: Cliara Cloud, Groq, Gemini, Ollama, OpenAI (OpenAI-compatible client)
    "openai>=1.0.0",
    "httpx>=0.25,<0.28",  # Pin: httpx 0.28+ breaks openai (proxies API change)
    # AI: BYOK Claude (setup wizard option)
    "anthropic>=0.8.0",
    # Semantic history: batch cosine similarity over embeddings
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",
]
all = [
    "cliara[postgres]",
]

[project.scripts]
cliara = "cliara.main:main"

[project.urls]
Homepage = "https://github.com/HreemPandya/cliara-app"
Documentation = "https://github.com/HreemPandya/cliara-app#readme"
Repository = "https://github.com/HreemPandya/cliara-app"
Issues = "https://github.com/HreemPandya/cliara-app/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cliara*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
cliara = ["agents/prompts/*.txt"]
